# SensorsForRestoration

./: .gitmodules  README.md  about.html  contact.html  forum.html  index.html  strapdown.js  style.css  updates.html
code/: FYS_ME__JSN-SR04T_Test.ino
code/colormetric_debug/: colormetri_debug.md  main.cpp  server_app.py  test_connection.py  view_cam.py
code/esp32/: *OLD* Air JSN Depth Sensor Code  CMakeLists.txt  README.md  Superior_Depth_Code_1.ino  Superior_Depth_Code_2_Tank.ino  partitions.csv
code/esp32/main/: CMakeLists.txt  data.h  idf_component.yml  main.c
code/esp32/main/receiver/: display.c  display.h  gps.c  gps.h  receiver.c  receiver.h  storage.c  storage.h
code/esp32/main/sensor/: camera.c  camera.h  logger.c  logger.h  sensor.c  sensor.h
code/ingest/: influx.py  ingest.py  reader.py
code/platform/: docker-compose.yml
docs/build_instruction/: BOM.md  pin_table.md
docs/tools/: battery_calculator.py  batterytools.md
tools/: render_build_static.js
updates/week10/: index.html
updates/week11/: index.html
updates/week12/: index.html  salinity_no_temp.txt
updates/week13/: calibration.txt  index.html  minimal.txt
updates/week14/: index.html
updates/week3/: index.html
updates/week4/: index.html
updates/week5/: index.html
updates/week6/: index.html
updates/week7/: IMG_4251.HEIC  index.html
updates/week8/: index.html
updates/week9/: index.html
